--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-嘻嘻  哈哈  呵呵  么么  嘟嘟  嘿嘿  biubiu
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>Document</title>
+	<style type="text/css">
+	* {margin: 0;padding: 0;}
+	.wrap{width: 930px;margin: 0 auto;}
+	.header{height: 102px;}
+	.header .logo{height: 102px;float: left;}
+	.logo{width: 109px;}
+	.nav a{text-decoration: none;color: #0055b3;}
+	.navs{list-style-type: none;float: left;background-image: url(images/sanjiao_05.gif);background-repeat: no-repeat;background-position: right center;margin-top: 48px;}
+	.navs a{display:block;text-decoration: none;font-size: 10px;font-family: Arial;color:#424345;text-align:left;padding:0px 28px;font-weight: 6px;}
+	.seach{width: 319px;float: right;padding-top: 16px;}}
+	.banner{height: 380px;clear: both;}
+	.dell{height: 308px;margin-top: 23px;}
+	.dell-center{padding-left: 12px;padding-right: 12px;}
+	.dell div{width: 302px;height: 285px;float: left;}
+	.dell h2{height: 31px;line-height: 18px;font-size: 12px; margin-left: 21px;}
+	.dell ul{list-style-image:url(images/sanjiao.gif);list-style-position: inside;margin: 13px 0px 0px 40px;}
+	.dell a{text-decoration: none;color: #000;font-size: 10px;}
+	.lang{height: 47px;clear: both;}
+	.english{width: 216px;}
+	.tubiao{width: 65px;}
+	.fuwu{height: 179px;}
+	.jieshao{width: 207px;float: left;margin: 8px 1px}
+	.jieshao{width: 186px;float: left;margin: 8px 1px}
+	.jieshao{width: 186px;float: left;margin: 8px 1px}
+	.jieshao{width: 186px;float: left;margin: 8px 1px}
+	.jieshao{width: 165px;float: left;margin: 8px 1px}
+	.jieshao li{padding-left:16px;list-style: none;font-size: 10px;font-family: Arial;line-height: 22px;background-image: url(images/black-sanjiao_15.gif);background-repeat: no-repeat;background-position: left center;}
+	</style>
+</head>
+<body>
+	<div class="wrap">
+		<div class="header">
+			<div class="header-inner">
+				<div class="logo"><img src="images/Dell01.gif" alt="" /></div>
+			<div class="nav">
+					<ul>
+					<li class="navs"><a href="#">For<br/>Home</a></li>
+					<li class="navs"><a href="#">For Small and<br/>Medium Business</a></li>
+					<li class="navs"><a href="#">For Public<br/>Sector</a></li>
+					<li class="navs"><a href="#">For Large<br/>Enterprise</a></li>
+				</ul>
+				</div>
+			<div class="seach">
+				<img src="images/search_05.gif"/>
+			</div>
+			</div>
+		</div>
+		<div class="banner">
+			<div class="banner-inner">
+				<img src="images/Dell_04.gif" alt="" />
+			</div>
+		</div>
+		<div class="dell">
+			<div class="dell-left"><h2>Dell Services</h2><img src="images/dell11.gif"><ul>
+				<li><a href="#">Achieve the highest level of clinical performance with our consulting services.</a></li>
+				<li><a href="#">Optimize your Healthcare lnformation System leveraging our experien with all the major HIS applications.</a></li>
+			</ul></div>
+			<div class="dell-center"><h2>Headlines</h2><img src="images/Dell_14.gif"><ul>
+				<li><a href="#">Record Results Ddelive in Fiscal Year 2011</a></li>
+				<li><a href="#">Dell New Cloud-Based Services for healthcare</a></li>
+				<li><a href="#">Dell acquires Compellent Technologies,lnc.</a></li>
+				<li><a href="#">Dell acquires SecureWorks,lnc.</a></li>
+				<li><a href="#">Dell acquires insite One,lnc.</a></li>
+			</ul></div>
+			<div class="deii-right"><h2>Dell Delas</h2><img src="images/Dell_17.gif"><ul>
+				<li><a href="#">Dell's Signature Sale!Save up to 45% off select systems.</a></li>
+				<li><a href="#">Deals for Home</a></li>
+				<li><a href="#">Deals for small&Medium Business</a></li>
+			</ul></div>
+		</div>
+		<div class="lang">
+			<div class="english"></div>
+			<div class="tubiao"></div>
+		</div>
+		<div class="fuwu">
+			<div class="jieshao">
+				<h2>Shop</h2>
+			<ul>
+			<li>Employes&Student<br/>Discounts</li>
+			<li>Home&Home Office</li>
+			<li>Small&Medium Business</li>
+			<li>Large Business</li>
+			<li>Public Sector</li>
+			<li>Partners</li>
+			<li>Dell Outlet</li>
+		</ul>
+			</div>
+			<div class="jieshao">
+				<h2>Community</h2>
+			<ul>
+			<li>Join the Discussion</li>
+			<li>Share Your Ideas</li>
+			<li>Read our Blog</li>
+			<li>Ratings&Reviews</li>
+			<li>Community Home</li>
+		</ul>
+			</div>
+			<div class="jieshao">
+				<h2>Support</h2>
+			<ul>
+			<li>All Support Options</li>
+			<li>Driver&Downloads</li>
+			<li>Product Support</li>
+			<li>Recall In formation</li>
+		</ul>
+			</div>
+			<div class="jieshao">
+				<h2>Company Information</h2>
+				<ul>
+				<li>About Dell</li>
+				<li>Corporate Responsibility</li>
+				<li>Careers</li>
+				<li>Investors</li>
+				<li>Newsroom</li>
+				<li>The power to do more</li>
+			</ul>
+			</div>
+			<div class="jieshao">
+				<h2>My Account</h2>
+				<ul>
+				<li>Sign-In/Register</li>
+				<li>Order Status</li>
+				<li>Order Support</li>
+				<li>Dell Subscription Center</li>
+				<li>Make a Payment </li>
+			</ul>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="footer-inner">
+			<img src="images/footer_16.gif"/>
+		</div>
+		</div>
+	</div>
+</body>
+</html>
