--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="css/http://nbyanbin.github.io/index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	<div class="wrap">
