--- a/100/4/index.html
+++ b/100/4/index.html
@@ -29,11 +29,14 @@
  border-radius: 5px;
   box-shadow: 10px 10px 5px 5px pink;
 }
+.img{border-radius: 50%;}
 	</style>
 </head>
 <body>
 	<div class="box">
-<div class="ball"></div>
+<div class="ball">
+	<img src="xujiao.jpg" alt="">
+</div>
 </div>
 </body>
 </html>
