--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="wrap">
 		<div class="header">
 			<div class="header-inner">
-				<div class="logo"><img src="images/Dell01.gif" alt="" /></div>
+				<div class="logo"><img src="http://a4.qpic.cn/psb?/V111dAye3UR91h/4gzeVy5ZOY85Kfr7E6lE9JU8ktWrxnQY4joqOXkRG3U!/m/dHMBAAAAAAAAnull&bo=bQBmAG0AZgACCi4!&rf=photolist&t=5" alt="" /></div>
 			<div class="nav">
 					<ul>
 					<li class="navs"><a href="#">For<br/>Home</a></li>
@@ -19,28 +19,28 @@
 				</ul>
 				</div>
 			<div class="seach">
-				<img src="images/search_05.gif"/>
+				<img src="http://a4.qpic.cn/psb?/V111dAye3UR91h/.fz8iKSsKiU2FU.cf.KV7F6Vyq3aXfh*oWlYk170DLk!/m/dHMBAAAAAAAAnull&bo=yQAZAMkAGQACCi4!&rf=photolist&t=5"/>
 			</div>
 			</div>
 		</div>
 		<div class="banner">
 			<div class="banner-inner">
-				<img src="images/Dell_04.gif" alt="" />
+				<img src="http://a4.qpic.cn/psb?/V111dAye3UR91h/ijtpFzhhPeQTxihqwBzcHB7bDTTGFYuTEz7JubPCq3Y!/m/dI8BAAAAAAAAnull&bo=ogN8AaIDfAECCi4!&rf=photolist&t=5" alt="" />
 			</div>
 		</div>
 		<div class="dell">
-			<div class="dell-left"><h2>Dell Services</h2><img src="images/dell11.gif"><ul>
+			<div class="dell-left"><h2>Dell Services</h2><img src="http://a3.qpic.cn/psb?/V111dAye3UR91h/6IjjWbFXtEJcDOvlpDk2SMV0V8vUgw9aUqPe*Vr88JI!/m/dHIBAAAAAAAAnull&bo=LAGCACwBggACCi4!&rf=photolist&t=5"><ul>
 				<li><a href="#">Achieve the highest level of clinical performance with our consulting services.</a></li>
 				<li><a href="#">Optimize your Healthcare lnformation System leveraging our experien with all the major HIS applications.</a></li>
 			</ul></div>
-			<div class="dell-center"><h2>Headlines</h2><img src="images/Dell_14.gif"><ul>
+			<div class="dell-center"><h2>Headlines</h2><img src="http://a4.qpic.cn/psb?/V111dAye3UR91h/8unzW2bP57Fz3NCMqNAKUKJdrs6kuHutivpfdUlB2.8!/m/dHMBAAAAAAAAnull&bo=LAGCACwBggACCi4!&rf=photolist&t=5"><ul>
 				<li><a href="#">Record Results Ddelive in Fiscal Year 2011</a></li>
 				<li><a href="#">Dell New Cloud-Based Services for healthcare</a></li>
 				<li><a href="#">Dell acquires Compellent Technologies,lnc.</a></li>
 				<li><a href="#">Dell acquires SecureWorks,lnc.</a></li>
 				<li><a href="#">Dell acquires insite One,lnc.</a></li>
 			</ul></div>
-			<div class="deii-right"><h2>Dell Delas</h2><img src="images/Dell_17.gif"><ul>
+			<div class="deii-right"><h2>Dell Delas</h2><img src="http://a3.qpic.cn/psb?/V111dAye3UR91h/336hqRmDsO7X*FIvqaCL29YB*TMwIzejHMnNxWOSk*I!/m/dHIBAAAAAAAAnull&bo=KwGCACsBggACCi4!&rf=photolist&t=5"><ul>
 				<li><a href="#">Dell's Signature Sale!Save up to 45% off select systems.</a></li>
 				<li><a href="#">Deals for Home</a></li>
 				<li><a href="#">Deals for small&Medium Business</a></li>
