--- a/100/13/index.html
+++ b/100/13/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>position: fixed</title>
+	<title>positionfixed</title>
 	<link rel="stylesheet" href="index.css">
 </head>
 <body>
