--- a/100/13/index.html
+++ b/100/13/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>positionfixed</title>
+	<title>positionfixed滑动</title>
 	<script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
 	<link rel="stylesheet" href="index.css">
 </head>
