--- a/100/17/index.html
+++ b/100/17/index.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
+	<meta name="viewport" content="width=device-width">
   <style>
   	.box {
   		height: 400px;
-  		width: 900px;
+  		width: 400px;
   		background-color:#451816;
+  		margin: 0 auto;
   	}
   </style>
 <body>
