--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>100</title>
+  <title>闫彬&XJ</title>
   <link rel="stylesheet" href="index.css">
   <meta name="viewport" content="width=device-width initial-scale=1">
   <link rel="stylesheet" href="css/font-awesome.min.css">
